[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/GenericScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Menu.gd" type="Script" id=2]

[node name="Menu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="Content" index="0"]
margin_top = 254.0
margin_bottom = 346.0

[node name="Host" type="Button" parent="Content/VBoxContainer" index="0"]
margin_right = 200.0
margin_bottom = 20.0
text = "Host a Room"

[node name="Join" type="Button" parent="Content/VBoxContainer" index="1"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Join a Room"

[node name="Train" type="Button" parent="Content/VBoxContainer" index="2"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "Training Room"

[node name="Settings" type="Button" parent="Content/VBoxContainer" index="3"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 92.0
text = "Settings"

[node name="BackButton" parent="." index="2"]
visible = false

[connection signal="pressed" from="Content/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Train" to="." method="_on_Train_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
